--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ jupyter = "^1.0.0"
 pandas = "^2.2.2"
 matplotlib = "^3.8.4"
 python-dotenv = "^1.0.1"
+alive-progress = "^3.1.5"
 
 
 [build-system]
