--- a/.github/workflows/weekly-triaged-issues.yml
+++ b/.github/workflows/weekly-triaged-issues.yml
@@ -41,9 +41,16 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m')"
+        run: echo "date=$(date +'%Y-%m')" >> $GITHUB_OUTPUT
 
       - name: run charts script
         run: poetry run python charts.py ${{ steps.date.outputs.date }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.email "tudorpopams@users.noreply.github.com"
+          git config --global user.name "tudorpopams"
+          git commit -am "Update weekly triaged issues"
+          git push
