--- a/.github/workflows/weekly-triaged-issues.yml
+++ b/.github/workflows/weekly-triaged-issues.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   triage:
+    permissions:
+      contents: write
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
