--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^2.2.2"
 matplotlib = "^3.8.4"
 python-dotenv = "^1.0.1"
 alive-progress = "^3.1.5"
+openpyxl = "^3.1.5"
 
 
 [build-system]
